@@ -2,6 +2,7 @@
 	Changed build system to SCons.
 	Reorganised code structure.
 	Added filtergen syntax emitter.
+	Added option to turn off the resolver (useful for debugging!)
 
 0.12.4:
 	Added directory include support.
